--- a/pages/01-controlled-inputs/index.mdx
+++ b/pages/01-controlled-inputs/index.mdx
@@ -52,7 +52,7 @@ function MyCounter() {
   const [count, setCount] = React.useState(0)
 
   return (
-    <button type="button" onClick={() => setCount(count + 1)}>
+    <button type="button" onClick={() => setCount((count) => count + 1)}>
       {count}
     </button>
   )
