--- a/pages/02-validation/index.mdx
+++ b/pages/02-validation/index.mdx
@@ -22,7 +22,7 @@ Creating a good form user experience requires client-side validation. The user s
 
 Now that we have our values on every render, we can validate them, and display validation errors when they are invalid.
 
-In this exercise, to void reinventing the wheel, we will use the library [`sane-email-validation`](https://github.com/scottgonzalez/sane-email-validation) to check if an email address is valid.
+In this exercise, to avoid reinventing the wheel, we will use the library [`sane-email-validation`](https://github.com/scottgonzalez/sane-email-validation) to check if an email address is valid.
 
 ## 🤔Should you store validation errors in state?
 
