Improved validation requirements

--- a/pages/02-validation/index.mdx
+++ b/pages/02-validation/index.mdx
@@ -12,6 +12,8 @@ Modify `pages/02-validation/SignupForm.js` to add client-side validation for all
   - When value is falsy, error message should be `'Required'`
   - When `isEmail()` returns false, error message should be `'Invalid Email'`
 
+The form should not be allowed to submit when there are validation errors.
+
 This page will hot-reload with your changes.
 
 <SignupForm />
