Clarification in Exercise 4

--- a/pages/04-record-level-validation/index.mdx
+++ b/pages/04-record-level-validation/index.mdx
@@ -2,7 +2,7 @@ import SignupForm from './SignupForm'
 
 # Exercise 4 – Record-Level Validation with React Final Form
 
-Add back "required" validation on all fields, and email validation with the `isEmail` predicate, in `pages/04-record-level-validation/SignupForm.js`.
+Add back the validation from [Exercise 2](/02-validation): The "required" validation on all fields, and email validation with the `isEmail` predicate, in `pages/04-record-level-validation/SignupForm.js`.
 
 This page will hot-reload with your changes.
 
