Removed duplicate docs link

--- a/pages/14-saving-with-graphql/index.mdx
+++ b/pages/14-saving-with-graphql/index.mdx
@@ -61,4 +61,4 @@ Don't forget that at any time, if your database gets messed up, you can run `git
 
 ### The `useMutation` hook
 
-The [`useMutation` hook](https://www.apollographql.com/docs/react/api/react-hooks/#usemutation) is very similar to the `useQuery` hook, except that it gives us a function to call to send the data. [Read the official docs](https://www.apollographql.com/docs/react/api/react-hooks/#usemutation) and see if you can figure out how to submit your form data.
+The `useMutation` hook is very similar to the `useQuery` hook, except that it gives us a function to call to send the data. [Read the official docs](https://www.apollographql.com/docs/react/api/react-hooks/#usemutation) and see if you can figure out how to submit your form data.
